--- a/index.html
+++ b/index.html
@@ -55,9 +55,105 @@
         </div>
       </div>
       <!--right-->
-      <div style="width: 35%; padding-left: 10px" class="right">
-        testing right
+      <div
+        style="
+          width: 35%;
+          padding: 10px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          color: #000000b5;
+        "
+        class="right"
+      >
+        <!--Create four childs-->
+        <div
+          class="child1"
+          style="display: flex; align-items: center; gap: 5px; cursor: pointer"
+        >
+          <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+          <h5 style="margin: 0px">Baliram</h5>
+          <i
+            class="fa fa-chevron-down"
+            style="font-size: 8px"
+            aria-hidden="true"
+          ></i>
+        </div>
+        <div
+          class="child2"
+          style="display: flex; align-items: center; gap: 5px; cursor: pointer"
+        >
+          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+          <h5 style="margin: 0px">Cart</h5>
+        </div>
+        <div
+          class="child3"
+          style="display: flex; align-items: center; gap: 5px; cursor: pointer"
+        >
+          <i
+            class="fa fa-address-card-o"
+            style="font-size: 13px"
+            aria-hidden="true"
+          ></i>
+          <h5 style="margin: 0px">Become a Sellar</h5>
+        </div>
+        <div class="child4" style="cursor: pointer">
+          <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+        </div>
       </div>
     </header>
+
+    <!--Main Part Start-->
+    <main style="background: red; margin: 5px 10px">
+      <!--create navigations-->
+      <nav
+        style="
+          background: white;
+          display: flex;
+          justify-content: center;
+          padding: 10px 0px;
+        "
+      >
+        <div class="links" style="width: 80%; display: flex">
+          <!---Creat 10 childs-->
+          <div style="width: 11%;  text-align: center;" class="child1">
+            <img width="50%" src="./grocery.webp" alt="">
+            <h6 style="margin: 0px;">Grocery</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child2">
+            <img width="50%" src="./mobile.webp" alt="">
+            <h6 style="margin: 0px;">Mobile</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child3">
+            <img width="50%" src="./fashions.webp" alt="">
+            <h6 style="margin: 0px;">Fashion</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child4">
+            <img width="50%" src="./electronics.webp" alt="">
+            <h6 style="margin: 0px;">Electronics</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child5">
+            <img width="50%" src="./furniture.webp" alt="">
+            <h6 style="margin: 0px;">Home & Furniture</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child6">
+            <img width="50%" src="./applaineces.webp" alt="">
+            <h6 style="margin: 0px;">Appliances</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child7">
+            <img width="50%" src="./travel.webp" alt="">
+            <h6 style="margin: 0px;">Travel</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child8">
+            <img width="50%" src="./toys.webp" alt="">
+            <h6 style="margin: 0px;">Beauty, Toys & More</h6>
+          </div>
+          <div style="width: 11%;  text-align: center;" class="child9">
+            <img width="50%" src="./bikes.webp" alt="">
+            <h6 style="margin: 0px;">Two Wheelers</h6>
+          </div>
+        </div>
+      </nav>
+    </main>
   </body>
 </html>
