--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
 
     <title>Online Shopping Site for Mobiles</title>
     <link rel="icon" href="./images.jpg" />
+    <!--fonteawesome 4.7.0-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!--bootstrap 5.3.2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
+      integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body style="background: #f1f2f4; padding: 0px; margin: 0px">
@@ -104,7 +114,7 @@
     </header>
 
     <!--Main Part Start-->
-    <main style="background: red; margin: 5px 10px">
+    <main style="margin: 5px 10px">
       <!--create navigations-->
       <nav
         style="
@@ -116,44 +126,289 @@
       >
         <div class="links" style="width: 80%; display: flex">
           <!---Creat 10 childs-->
-          <div style="width: 11%;  text-align: center;" class="child1">
-            <img width="50%" src="./grocery.webp" alt="">
-            <h6 style="margin: 0px;">Grocery</h6>
+          <div style="width: 11%; text-align: center" class="child1">
+            <img width="50%" src="./grocery.webp" alt="" />
+            <h6 style="margin: 0px">Grocery</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child2">
-            <img width="50%" src="./mobile.webp" alt="">
-            <h6 style="margin: 0px;">Mobile</h6>
+          <div style="width: 11%; text-align: center" class="child2">
+            <img width="50%" src="./mobile.webp" alt="" />
+            <h6 style="margin: 0px">Mobile</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child3">
-            <img width="50%" src="./fashions.webp" alt="">
-            <h6 style="margin: 0px;">Fashion</h6>
+          <div style="width: 11%; text-align: center" class="child3">
+            <img width="50%" src="./fashions.webp" alt="" />
+            <h6 style="margin: 0px">Fashion</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child4">
-            <img width="50%" src="./electronics.webp" alt="">
-            <h6 style="margin: 0px;">Electronics</h6>
+          <div style="width: 11%; text-align: center" class="child4">
+            <img width="50%" src="./electronics.webp" alt="" />
+            <h6 style="margin: 0px">Electronics</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child5">
-            <img width="50%" src="./furniture.webp" alt="">
-            <h6 style="margin: 0px;">Home & Furniture</h6>
+          <div style="width: 11%; text-align: center" class="child5">
+            <img width="50%" src="./furniture.webp" alt="" />
+            <h6 style="margin: 0px">Home & Furniture</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child6">
-            <img width="50%" src="./applaineces.webp" alt="">
-            <h6 style="margin: 0px;">Appliances</h6>
+          <div style="width: 11%; text-align: center" class="child6">
+            <img width="50%" src="./applaineces.webp" alt="" />
+            <h6 style="margin: 0px">Appliances</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child7">
-            <img width="50%" src="./travel.webp" alt="">
-            <h6 style="margin: 0px;">Travel</h6>
+          <div style="width: 11%; text-align: center" class="child7">
+            <img width="50%" src="./travel.webp" alt="" />
+            <h6 style="margin: 0px">Travel</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child8">
-            <img width="50%" src="./toys.webp" alt="">
-            <h6 style="margin: 0px;">Beauty, Toys & More</h6>
+          <div style="width: 11%; text-align: center" class="child8">
+            <img width="50%" src="./toys.webp" alt="" />
+            <h6 style="margin: 0px">Beauty, Toys & More</h6>
           </div>
-          <div style="width: 11%;  text-align: center;" class="child9">
-            <img width="50%" src="./bikes.webp" alt="">
-            <h6 style="margin: 0px;">Two Wheelers</h6>
+          <div style="width: 11%; text-align: center" class="child9">
+            <img width="50%" src="./bikes.webp" alt="" />
+            <h6 style="margin: 0px">Two Wheelers</h6>
           </div>
         </div>
       </nav>
+
+      <!--Offers slider create -->
+      <section class="offers_slider">
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <!--it has default 2 childs -->
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <!--first slide img-->
+            <div class="carousel-item active">
+              <img src="./offers/first.webp" class="d-block w-100" alt="..." />
+            </div>
+            <!--second slide img-->
+            <div class="carousel-item">
+              <img src="./offers/second.webp" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            style="
+              background: white;
+              width: 40px;
+              height: 88px;
+              opacity: 1;
+              margin: auto;
+              border-top-right-radius: 10px;
+              border-bottom-right-radius: 10px;
+            "
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <i
+              class="fa fa-chevron-left"
+              style="color: black"
+              aria-hidden="true"
+            ></i>
+            <!-- <span class="carousel-control-prev-icon" style="color: black;" aria-hidden="true"></span> -->
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            style="
+              background: white;
+              width: 40px;
+              height: 88px;
+              opacity: 1;
+              margin: auto;
+              border-top-left-radius: 10px;
+              border-bottom-left-radius: 10px;
+            "
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <i
+              class="fa fa-chevron-right"
+              style="color: black"
+              aria-hidden="true"
+            ></i>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <!--Electronics-->
+      <section
+        style="margin: 10px 0px; display: flex; justify-content: space-between"
+        class="electronics"
+      >
+        <!--left-->
+        <div class="left" style="width: 80%; background: white">
+          <!--top-->
+          <div
+            class="b_top"
+            style="
+              margin: 20px 10px;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+            "
+          >
+            <h4 style="margin: 0px">Best Electronics</h4>
+            <i
+              class="fa fa-chevron-right"
+              style="
+                background: #1c41d6;
+                padding: 5px;
+                border-radius: 50%;
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                font-size: 14px;
+                padding-top: 7px;
+              "
+              aria-hidden="true"
+            ></i>
+          </div>
+          <!--Bottom-->
+          <div class="b_bottom" style="margin-top: 50px;">
+            <div id="carouselExampleIndicators1" class="carousel slide">
+              <div class="carousel-inner">
+                <!--first slide img-->
+                <div class="carousel-item active">
+                  <div style=" width: 90%; margin: auto; display: flex; text-align: center; justify-content: space-between;" class="product1">
+                    <!--create 5 childrens-->
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/613loUzm9WL._AC_SY200_.jpg" alt="">
+                      <p style="margin: 0px; font-style: normal; ">Best Selling Security</p>
+                      <h6 style="margin: 0px; ">From ₹29</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" width="95%" src="./electronics/61ge72aiPiL._AC_SY200_.jpg" alt="">
+                      <p style="margin: 0px; font-style: normal; ">USB Gadgest</p>
+                      <h6 style="margin: 0px; ">From ₹179</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61J6FDs5PFL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Top Mirrorless Cameras</p>
+                      <h6 style="margin: 0px; ">Shop Now</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61OeOSrwacL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Monitors</p>
+                      <h6 style="margin: 0px; ">From ₹9999</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61zxhscfJxL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Wireless Mouse & Keyboard</p>
+                      <h6 style="margin: 0px; ">From ₹169</h6>
+                    </div>
+
+                  </div>
+                </div>
+                <!--second slide img-->
+                <div class="carousel-item">
+                  <div style=" width: 90%; margin: auto; display: flex; text-align: center; justify-content: space-between;" class="product1">
+                    <!--create 5 childrens-->
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/613loUzm9WL._AC_SY200_.jpg" alt="">
+                      <p style="margin: 0px; font-style: normal; ">Best Selling Security</p>
+                      <h6 style="margin: 0px; ">From ₹29</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" width="95%" src="./electronics/61ge72aiPiL._AC_SY200_.jpg" alt="">
+                      <p style="margin: 0px; font-style: normal; ">USB Gadgest</p>
+                      <h6 style="margin: 0px; ">From ₹179</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61J6FDs5PFL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Top Mirrorless Cameras</p>
+                      <h6 style="margin: 0px; ">Shop Now</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61OeOSrwacL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Monitors</p>
+                      <h6 style="margin: 0px; ">From ₹9999</h6>
+                    </div>
+                    <div style="width: 18%; border: 1px solid gray; padding: 10px;">
+                      <img style="margin: 10px 0px;" src="./electronics/61zxhscfJxL._AC_SY200_.jpg  " alt="">
+                      <p style="margin: 0px; font-style: normal; ">Wireless Mouse & Keyboard</p>
+                      <h6 style="margin: 0px; ">From ₹169</h6>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+              <button
+                style="
+                  background: white;
+                  width: 40px;
+                  height: 88px;
+                  opacity: 1;
+                  margin: auto;
+                  border-top-right-radius: 10px;
+                  border-bottom-right-radius: 10px;
+                "
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleIndicators1"
+                data-bs-slide="prev"
+              >
+                <i
+                  class="fa fa-chevron-left"
+                  style="color: black"
+                  aria-hidden="true"
+                ></i>
+                <!-- <span class="carousel-control-prev-icon" style="color: black;" aria-hidden="true"></span> -->
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                style="
+                  background: white;
+                  width: 40px;
+                  height: 88px;
+                  opacity: 1;
+                  margin: auto;
+                  border-top-left-radius: 10px;
+                  border-bottom-left-radius: 10px;
+                "
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleIndicators1"
+                data-bs-slide="next"
+              >
+                <i
+                  class="fa fa-chevron-right"
+                  style="color: black"
+                  aria-hidden="true"
+                ></i>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--right-->
+        <div class="right" style="width: 18%; background: green">
+          <img width="100%" src="./flipkart_elect_post.png" alt="" />
+        </div>
+      </section>
     </main>
+
+    <!--javascript start form here-->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"
+      integrity="sha512-X/YkDZyjTf4wyc2Vy16YGCPHwAY8rZJY+POgokZjQB2mhIRFJCckEGc6YyX9eNsPfn0PzThEuNs+uaomE5CO6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </body>
 </html>
